add debug func for figure out problem

--- a/Algo_DFS/Algo_DFS.vcxproj
+++ b/Algo_DFS/Algo_DFS.vcxproj
@@ -120,6 +120,10 @@
   <ItemGroup>
     <ClCompile Include="source.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test-case1.txt" />
+    <Text Include="test-case2.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
