--- a/Algo_DFS/Algo_DFS.vcxproj
+++ b/Algo_DFS/Algo_DFS.vcxproj
@@ -124,6 +124,16 @@
     <Text Include="test-case1.txt" />
     <Text Include="test-case2.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="testData\1.in" />
+    <None Include="testData\1.out" />
+    <None Include="testData\2.in" />
+    <None Include="testData\2.out" />
+    <None Include="testData\3.in" />
+    <None Include="testData\3.out" />
+    <None Include="testData\4.in" />
+    <None Include="testData\4.out" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
